# Ilya

./: .gitignore  CMakeLists.txt  Cargo.toml  Ilya.hpp  README.md  image.ppm  main.cpp
Objects/: BoundingBox.cpp  BoundingBox.hpp  Camera.hpp  Hittable.cpp  Hittable.hpp  Material.cpp  Material.hpp  Ray.hpp  Texture.cpp  Texture.hpp
Utils/: Color.cpp  Color.hpp  Perlin.hpp  Vector3.cpp  Vector3.hpp  Vector4.hpp
app/: CMakeLists.txt  app.cpp  image.ppm
ilya/: Cargo.toml
ilya/src/: hittable.rs  lib.rs  ray.rs  renderer.rs  scene.rs  utils.rs
ilya/src/utils/: point.rs
ilya_app/: Cargo.toml
ilya_app/src/: engine.rs  gui.rs  main.rs  window.rs
img/: false_lambertian.ppm  glass.ppm  instances.ppm  lambertian.ppm  marble.ppm  metal.ppm  metal_fuziness.ppm  volume.ppm
src/: Core.hpp  Ilya.hpp  app.rs  color.rs  engine.rs  gui.rs  hittable.rs  ilpch.hpp  main.cpp  main.rs  ray.rs  scene.rs
src/Core/: Application.cpp  Application.h  Application.hpp  Image.cpp  Image.hpp  Renderer.cpp  Renderer.hpp
src/Core/ImGui/: Layer.hpp
src/Objects/: BoundingBox.cpp  BoundingBox.hpp  Bounds.cpp  Bounds.hpp  Camera.hpp  Hittable.cpp  Hittable.hpp  Instances.cpp  Instances.hpp  Material.cpp  Material.hpp  Ray.hpp  Shape.cpp  Shape.hpp  Texture.hpp
src/Objects/Shapes/: Shape.cpp  Shape.hpp  Sphere.cpp  Sphere.hpp
src/Utils/: Color.cpp  Color.hpp  Interaction.cpp  Interaction.hpp  Math.cpp  Math.hpp  Matrix4.cpp  Matrix4.hpp  PDF.hpp  Perlin.hpp  Random.cpp  Random.hpp  Transform.cpp  Transform.hpp  Vector3.cpp  Vector3.hpp  Vector4.hpp  functions.cpp  functions.hpp
src/Utils/Math/: functions.hpp  geometry.cpp  geometry.hpp
