[package]
name = "ilya"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.21.0"
egui-wgpu = "0.21.0"
egui-winit = "0.21.1"
glam = "0.24.0"
image = "0.24.6"
pixels = "0.12.1"
winit = "0.28.6"
winit_input_helper = "0.14.1"
